overflow fix for landing

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   // height: 100vh;
   margin: 0 auto;
   position: relative;
+  overflow-x: hidden;
 }
 
 .app-content {
